[package]
name = "rusty"
version = "0.1.3"
authors = ["Musa <songoku42@outlook.de>"]
description = "This is the offical Rusty: Rust Formatter, Cargo Package."
license = "MIT" 
repository = "https://github.com/s42yt/rusty-cargo"
homepage = "https://yourhomepage.com"
readme = "README.md"
keywords = ["Rust", "Formatter", "Easy"]
categories = ["Formatter"]
edition = "2021"

[dependencies]
walkdir = "2.3.2"
