[package]
name = "rusty-formatter"
version = "0.1.4"
authors = ["Musa <songoku42@outlook.de>"]
description = "This is the offical Rusty: Rust Formatter, Cargo Package."
license = "MIT" 
repository = "https://github.com/S42yt/rusty-cargo.git"
homepage = "https://yourhomepage.com"
readme = "README.md"
keywords = ["Rust", "Formatter", "Easy"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
walkdir = "2.3.2"

[[bin]]
name = "rusty"
path = "src/main.rs"